feature: es 生命周期相关的知识点